# JSON2obj

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
src/json2obj/: __init__.py  env_vars.py  files.py  json2obj.py  json_file.py  yaml.py  yaml_file.py
src/json2obj/ObjectifyConfig/: __init__.py  config2obj.py  config_class.py  configurator.py
src/json2obj/examples/: example_base_template.yaml  example_user_config.yaml
tests/: test_from_dict.py  test_from_dict_env_var.py  test_from_json.py  test_from_yaml.py
tests/files/: example_config.yaml  example_user_config.yaml  example_user_config_template.yaml  test_1.yaml  test_file_1.json
tests/test_configurator/: test_configurator.py
