[metadata]
name = JSON2Obj
version = 0.0.1-dev1
description = Read JSON files into python objects
long_description = file: README.md
long_description_content_type = text/markdown
keywords = JSON
license = <<LICENSE>>
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    # License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = <<REPO URL>>
project_urls =
    # Bug Tracker = https://github.com/zpriddy/...
    Blog = https:/zpriddy.com
    Source Code = https://github.com/zpriddy/JSON2Obj
author = Zachary Priddy
author_email = py@zpriddy.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    # package_name
    # other_package=0.0.1-dev1
deps =
    # -e git+https://git@github.com/zpriddy/package.git#egg=package

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
    # module-server = module.servelocal:run


[options.extras_require]
testing =
    tox
    pytest
    pytest-cov
    coverage
docs =
    Sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

[bdist_wheel]
universal=0

[tool:pytest]
ignore=tests/fixtures/
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing
